environments/dev/app-1/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-app-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
  namespace: ns-app-1
  labels:
    app: nginx-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - name: nginx
          image: reddddddddd/magpie-app:2
          ports:
            - containerPort: 8001

---
kind: Service
apiVersion: v1
metadata:
  name: nginx-1
  namespace: ns-app-1
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8001
  selector:
    app: nginx-1
