environments/dev/app-1/networking.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-net-1
  namespace: ns-app-1
  annotations:
    nginx.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/group-name: ns-net
    nginx.ingress.kubernetes.io/group-order: "4"
    
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: cert-manager-global

    # nginx.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'

    # turn on promethues on /metrics
    nginx.ingress.kubernetes.io/enable-prometheus-metrics: "true"
    promethues.io/scrape: "true"
    promethues.io/port: "10254"
    promethues.io/path: "/metrics"

spec:
  ingressClassName: external-nginx
  rules:
    - host: dev.api.redevops.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-1
                port:
                  number: 8001
  
  tls:
  - hosts:
    - dev.api.redevops.store
    secretName: ssl-certificate-tls
